/*
 * $Id: ChangeLog,v 1.6241 2008/10/24 07:40:07 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-10-24 13:41 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\vm\fm.c
    ! fixed some remaining bugs, now are tested 3 group of memory functions.
      please test it.

2008-10-24 09:41 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\vm\fm.c
    * restored the use of memory, now to test DL_ALLOC will be explicit with macro -DHB_FM_DL_ALLOC
	#if defined( HB_FM_DL_ALLOC ) && ( defined( _MSC_VER ) || defined( __BORLANDC__ ) || defined( __MINGW32__ ) )
	   #undef HB_FM_STD_ALLOC
	   #undef HB_FM_WIN32_ALLOC
	#elif defined( __EXPORT__ ) && !defined( HB_FM_WIN32_ALLOC )
	   #define HB_FM_WIN32_ALLOC
	   #undef HB_FM_DL_ALLOC
	   #undef HB_FM_STD_ALLOC   
	#elif defined( HB_FM_WIN32_ALLOC )
	   #undef HB_FM_DL_ALLOC
	   #undef HB_FM_STD_ALLOC   
	#elif defined( HB_FM_STD_ALLOC )
	   #undef HB_FM_DL_ALLOC
	   #undef HB_FM_WIN32_ALLOC
	#else
	   #define HB_FM_STD_ALLOC 
	   #undef HB_FM_DL_ALLOC
	   #undef HB_FM_WIN32_ALLOC
	#endif   

2008-10-23 21:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\common\hbfsapi.c
  * source\vm\dlmalloc.c
    ! minor fixes to build with some compilers

2008-10-23 17:52 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\vm\fm.c
    ! fixed warnings when are not defined HB_FM_WIN32_ALLOC
  + source\vm\dlmalloc.c
    + added alternative memory manager written by Doug Lea
      It can be activated by recompiling Harbour with HB_FM_DL_ALLOC macro.
      Please make test on different platforms with different C compilers.
      Linux users will not benefit from it because the default GLIBC MM
      is derived from a version of code.
      NOTE: the results may strongly depend on total memory allocation