@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6241 2008/10/24 07:40:07 marchuet Exp $
+ * $Id: ChangeLog,v 1.6242 2008/10/24 11:40:13 marchuet Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-10-24 17:20 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
+  * source\vm\fm.c
+    ! fixed remaining casting sin MT mode, please test it.
 
 2008-10-24 13:41 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   * source\vm\fm.c
